client: Add a synthetic fix for CKeditor list spacing (closes #341)

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -623,6 +623,10 @@ div[data-notify="container"] {
     background-color: var(--accented-background-color) !important;
 }
 
+.ck-content li p {
+    margin: 0 !important;
+}
+
 #options-dialog input[type=number] {
     text-align: right;
 }
